--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>test</title>
+    <script src="static/js/Encryption.js"></script>
   </head>
   <body style="margin: 0px">
     <div id="app"></div>
